# rufus-for-linux

./: .gitignore  COPYING  Dependencies.txt  README.md  core.py  gui.py  main.py  meson.build  new_gui.py  org.example.App.json  requirements.txt  root.py  test.py  write.py
.cache/: font-dirs.xml
WoeUSB/: core.py  utils.py  workaround.py
core/: core.py
data/: org.example.App.appdata.xml.in  org.example.App.desktop.in  org.example.App.gschema.xml
po/: meson.build
rufus-for-linux/po/: meson.build
rufus-for-linux/src/: meson.build  window.py  window.ui~
src/: #window.ui#~  application.vala  main.py  main.vala  meson.build  rfl-ui.in  rufus-for-linux.in  window.py  window.ui  window.ui~  window.vala
testing/: test.py  test2.py
